--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -211,17 +211,21 @@ We will not worry about the concerns raised, because a single formal world is st
 
 In this section, we describe the basic principles on which Coq is founded and then give a short tutorial on the basics.
 
-Coq is based on a formal system called Calculus of Constructions (CoC)\cite{CoC}, which later evolved into the Calculus of Inductive Constructions (CIC) \cite{CIC} and finally into Predicative Calculus of Cumulative Inductive Constructions (pCuIC) \cite{pCuIC}. To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type Theory (MLTT) \cite{MLTT1} \cite{MLTT2}, a closely related system. From now on, when refering to MLTT, we will say just ``type theory''.
+Coq is based on a formal system called Calculus of Constructions (CoC)\cite{CoC}, which later evolved into the Calculus of Inductive Constructions (CIC) \cite{CIC} and finally into Predicative Calculus of Cumulative Inductive Constructions (pCuIC) \cite{pCuIC}. To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type Theory (MLTT) \cite{MLTT1} \cite{MLTT2}, a closely related system. From now on, when refering to MLTT, we will call it simply ``type theory''.
 
-In type theory, as the name suggests, the basic objects of interest are types. In order to be meaningful, a type must first be formed. For example, we can always form the type $\N$ of natural numbers, but in general this is not the case: sometimes to form a type we must make an assumption or even several assumptions. We keep track of our assumptions using contexts. For example, if in our context $\Gamma$ we can form the types $A$ and $B$, written $\Gamma \vdash A$ and $\Gamma \vdash B$, then we can form the type of functions from $A$ to $B$, written $\Gamma \vdash A \to B$. The rules that govern type formation are called, unsurprisingly, formation rules.
+In type theory, as the name suggests, the basic objects of interest are types. In order to be meaningful, a type must first be formed. For example, we can always form the type $\N$ of natural numbers, but in general this is not the case: sometimes to form a type we must make an assumption or even several assumptions. We keep track of our assumptions using contexts. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\Gamma \vdash A$ and $\Gamma \vdash B$, then we can form the type of functions from $A$ to $B$, written $\Gamma \vdash A \to B$. The rules that govern type formation are called, unsurprisingly, formation rules.
 
-After we have formed a type, we can manipulate its terms. For example, the type of natural numbers $\N$ has as terms, among others, $4$ and $2 + 2$, written respectively $4 : \N$ and $2 + 2 : \N$. Similarly to the case of type formation, what is a term and what is not depends on the assumptions we have made: $n + m : \N$ only under the assumptions that $n : \N$ and $m : \N$, which we can formally write as $n : \N, m : \N \vdash n + m : \N$. From now on we won't emphasize context-dependence, as everything we can do in type theory depends on context.
+After we have formed a type, we can manipulate its terms. For example, the type of natural numbers $\N$ has as terms, among others, $4$ and $2 + 2$, written respectively $4 : \N$ and $2 + 2 : \N$. Similarly to the case of type formation, what is a term and what is not depends on the assumptions we have made: $n + m : \N$ only under the assumptions that $n : \N$ and $m : \N$, which we can formally write as $n : \N, m : \N \vdash n + m : \N$. From now on we won't emphasize context-dependence, as everything we do in type theory depends on context.
 
-Rules for creating terms are divided into two kinds: introduction rules and elimination rules. Introduction rules for a type $A$ tell us how to create new terms of this, given terms of other types. For example, the introduction rules for $\N$ are $\Gamma \vdash 0 : \N$, which says that $0$ is a natural number, and $\Gamma, n : \N \vdash \m{succ}\ n : \N$, which says that the successor of $n$ is a natural number given that $n$ is. Elimination rules for a type $A$, on the other hand, tell us how to use terms of type $A$ to get terms of other types. For example, the simplest elimination rule\footnote{This rule, called a recursor, allows us to define functions by recursion on a natural number if we have one, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.} for $\N$ says that if $\Gamma \vdash z : A$ and $\Gamma \vdash s : \N \to A$, then $\Gamma, n : \N \vdash \m{rec}_\N(z, s, n) : A$.
+Rules for creating terms are divided into two kinds: introduction rules and elimination rules. Introduction rules for a type $A$ tell us how to create new terms of this type, given terms of other types. For example, the introduction rules for $\N$ are $\Gamma \vdash 0 : \N$, which says that $0$ is a natural number, and $\Gamma, n : \N \vdash \m{succ}\ n : \N$, which says that the successor of $n$ is a natural number given that $n$ is a natural number. Elimination rules for a type $A$, on the other hand, tell us how to use terms of that type to get terms of other types. For example, the simplest elimination rule\footnote{This rule, called a recursor, allows us to define functions by recursion on a natural number if we have one, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.} for $\N$ says that if $\Gamma \vdash z : X$ and $\Gamma \vdash s : \N \to X$, then $\Gamma, n : \N \vdash \m{rec}_\N(z, s, n) : X$.
 
+The next thing we are interested in is evaluation. For example, we would expect that $2 + 2 : \N$ evaluates to $4 : \N$ and this is indeed the case. However, in almost all presentations of type theory instead of evaluation we talk about convertibility -- the least equivalence relation induced by evaluation. Formally we write $\Gamma \vdash 2 + 2 \equiv 4 : \N$, which literally means that $2 + 2$ and $4$ evaluate to the same result (which is $4$ -- $2 + 2$ evaluates to $4$ and $4$ evaluates to itself). Rules that govern the behaviour of convertibility, similarly to rules for term manipulation, come in two genres: computation rules and uniqueness rules.
 
+Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\Gamma \vdash z : X$ and $\Gamma \vdash s : \N \to X$, we have $\Gamma \vdash \m{rec}_\N(z, s, 0) \equiv z : \N$, and the second rule states that given $\Gamma \vdash z : X$, $\Gamma \vdash s : \N \to X$ and $\Gamma \vdash n : \N$ we have $\Gamma \vdash \m{rec}_\N(z, s, \m{succ}\ n) \equiv s (\m{rec}_\N(z, s, n)) : \N$.
 
+Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\Gamma \vdash n : \N$, we have $\Gamma \vdash \m{rec}_\N(0, \m{succ}, n) \equiv n$. Note, however, that this uniqueness rule for natural numbers is rarely included in most presentations of type theory.
 
+The last thing to mention is how exactly contexts work and some of its consequences. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$, for example $\vdash \N$ which says that we can form the type $\N$ in the empty context. Second, if we have a context $\Gamma$ and in this context we can derive $\Gamma \vdash A$
 
 
 
